<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@mipmap/______________________400x400" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:paddingLeft="@dimen/dimen_32x"
            android:paddingRight="@dimen/dimen_32x"
            android:paddingTop="@dimen/dimen_16x">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_32x"
            android:paddingRight="@dimen/dimen_32x"
            android:paddingTop="@dimen/dimen_16x"
            android:textColorHint="@color/light_grey"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/light_grey">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/password"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:password="true" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/dimen_16x"
            android:text="@string/forgot_password"
            android:textColor="@color/dark_grey"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_32x"
            android:layout_marginRight="@dimen/dimen_32x"
            android:layout_marginTop="@dimen/dimen_16x"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@color/white" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginLeft="@dimen/dimen_32x"
            android:layout_marginRight="@dimen/dimen_32x"
            android:layout_marginTop="@dimen/dimen_16x"
            android:background="@color/white"
            android:paddingTop="@dimen/dimen_16x"
            android:text="@string/not_a_member"
            android:textColor="@color/dark_grey" />

</LinearLayout>
</LinearLayout>
    </ScrollView>