<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a1605476.registrationapp.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:scaleType="fitCenter"
           android:src="@mipmap/______________________400x400" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:paddingLeft="@dimen/dimen_64x"
            android:paddingRight="@dimen/dimen_64x">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:hint="@string/name"
                android:textColorHint="@color/dark_grey" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_64x"
            android:paddingRight="@dimen/dimen_64x">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/email"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/dark_grey" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_64x"
            android:paddingRight="@dimen/dimen_64x"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/password"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:password="true"
                android:textColorHint="@color/dark_grey" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRegister"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16x"
            android:layout_marginLeft="@dimen/dimen_64x"
            android:layout_marginRight="@dimen/dimen_64x"
            android:layout_marginTop="@dimen/dimen_32x"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="Sign Up" />



        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLinkToLoginScreen"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16x"
            android:layout_marginLeft="@dimen/dimen_64x"
            android:layout_marginRight="@dimen/dimen_64x"
            android:layout_marginTop="@dimen/dimen_32x"
            android:textColor="@color/colorPrimary"
            android:text="Old User?"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>
</ScrollView>